package edu.fiuba.algo3.modelo;

import java.util.Objects;

public class Vector {
    private final int x;
    private final int y;

    public Vector() {
        this.x = 0;
        this.y = 0;
    }

    public Vector(int x, int y) {
        this.x = x;
        this.y = y;
    }

    public int x() {
        return this.x;
    }

    public int y() {
        return this.y;
    }

    public Vector restar(Vector otro) {
        return new Vector(this.x - otro.x, this.y - otro.y);
    }

    @Override
    public boolean equals(Object o) {
        if (this == o) return true;
        if (o == null || getClass() != o.getClass()) return false;
        Vector vector = (Vector) o;
        return x == vector.x && y == vector.y;
    }

    @Override
    public int hashCode() {
        return Objects.hash(x, y);
    }

    public Vector sumar(Vector origen) {
        return new Vector(this.x + origen.x, this.y + origen.y);
    }

    public Vector multiplicar(int factor) {
        return new Vector(this.x * factor, this.y * factor);
    }
}
